added homebrew to goreleaser

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -11,6 +11,46 @@ archives:
     windows: Windows
     386: i386
     amd64: x86_64
+
+brews:
+  - name: spark
+
+    # IDs of the archives to use.
+    # Defaults to all.
+    ids:
+    - foo
+    - bar
+
+    github:
+      owner: chevalmuscle
+      name: homebrew-spark-idea
+
+    url_template: "http://github.com/chevalmuscle/spark/releases/{{ .Tag }}/{{ .ArtifactName }}"
+
+    # Folder inside the repository to put the formula.
+    # Default is the root folder.
+    folder: Formula
+
+    # Your app's description.
+    # Default is empty.
+    description: "A simple cli to input and store your ideas directly with git and without a text editor"
+
+    skip_upload: auto
+
+    # Custom block for brew.
+    # Can be used to specify alternate downloads for devel or head releases.
+    # Default is empty.
+    custom_block: |
+      head do
+        "https://github.com/chevalmuscle/spark.git"
+        depends_on "go"
+      end
+
+    # Custom install script for brew.
+    # Default is 'bin.install "program"'.
+    install: |
+      bin.install "bin/spark"
+
 checksum:
   name_template: 'checksums.txt'
 snapshot:
